syntax = "proto3";

package helloService;

option go_package = "./";
service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
    rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message GoodbyeRequest {
    string name = 1;
}

message GoodbyeResponse {
    string message = 1;
}
